# NuSiF

./: .gitignore  CMakeLists.txt  README.md  summary.tex
01/: include_GCC.mk
01/src/: Array.cc  Array.hh  Debug.cc  FileReader.cc  FileReader.hh  main.cc
02/: Makefile  README.txt  include_GCC.mk  include_GCCdebug.mk
02/src/: Array.cc  Array.hh  Debug.hh  FileReader.cc  FileReader.hh  SORSolver.cc  SORSolver.hh  StaggeredGrid.cc  StaggeredGrid.hh  Types.hh  main.cc
03/: dcavity.par
03/src/: FileReader.cc  FluidSimulator.cc  FluidSimulator.hh  SORSolver.cc  SORSolver.hh  StaggeredGrid.cc  StaggeredGrid.hh  main.cc
04/: canal.par  canal_slip.par  dcavity.par  include_Clang.mk  include_GCC.mk
04/src/: Array.cc  Array.hh  Boundary.hh  Debug.cc  Debug.hh  FileReader.cc  FileReader.hh  FluidSimulator.cc  FluidSimulator.hh  FreeSlipBoundary.cc  FreeSlipBoundary.hh  InflowBoundary.cc  InflowBoundary.hh  NoslipBoundary.cc  NoslipBoundary.hh  OutflowBoundary.cc  PeriodicBoundary.cc  SORSolver.cc  SORSolver.hh  SlipBoundary.cc  SlipBoundary.hh  StaggeredGrid.cc  StaggeredGrid.hh  Types.cc  Types.hh  VTKWriter.cc  main.cc
05/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  backstep.par  canal.par  canal_slip.par  dcavity_book.par  gravity.par  include_GCC.mk  include_GCCdebug.mk
05/include/: Boundary.hh  Debug.hh  FluidSimulator.hh  FreeSlipBoundary.hh  PeriodicBoundary.hh  SORSolver.hh  StaggeredGrid.hh  VTKWriter.hh
05/src/: Array.cc  Array.hh  Debug.cc  Debug.hh  FileReader.cc  FluidSimulator.cc  FreeSlipBoundary.cc  FreeSlipBoundary.hh  GrayScaleImage.cc  GrayScaleImage.hh  InflowBoundary.cc  InflowBoundary.hh  NoslipBoundary.cc  NoslipBoundary.hh  OutflowBoundary.cc  OutflowBoundary.hh  PeriodicBoundary.cc  PeriodicBoundary.hh  SORSolver.cc  SORSolver.hh  StaggeredGrid.cc  StaggeredGrid.hh  Types.hh  VTKWriter.cc  main.cc
06/praxis/: a.py  bondary.txt  outputA.txt  task2.py
06/theory/: Makefile  matrix.txt  theory.tex
summary/: Makefile  discretization.tex  introduction.tex  mathematicalDescription.tex  stokes.tex  summary.tex  visualization.tex
